--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,9 @@
         <div id="levels">
             <!-- Card para o nível Beginner -->
             <div class="level-card">
+                <div class="progress-circle" data-progress="25">
+                    <span class="progress-value">25%</span>
+                </div>
                 <h2>Beginner</h2>
                 <p>Focus on basic verb tenses (past simple, present simple, future simple) and short, straightforward
                     sentences with common, everyday vocabulary.</p>
@@ -24,6 +27,9 @@
 
             <!-- Card para o nível Intermediate -->
             <div class="level-card">
+                <div class="progress-circle" data-progress="50">
+                    <span class="progress-value">50%</span>
+                </div>
                 <h2>Intermediate</h2>
                 <p>Combination of simple and contextualized structures, focusing on everyday situations and the use of
                     verb tenses like past simple, present continuous, and future simple.</p>
@@ -32,6 +38,9 @@
 
             <!-- Card para o nível Advanced -->
             <div class="level-card">
+                <div class="progress-circle" data-progress="75">
+                    <span class="progress-value">75%</span>
+                </div>
                 <h2>Advanced</h2>
                 <p>Use of complex verb tenses (past perfect, future perfect) and elaborate structures, with longer
                     sentences and more challenging vocabulary.</p>
